--- a/Mediminder/SupportFiles/Base.lproj/Main.storyboard
+++ b/Mediminder/SupportFiles/Base.lproj/Main.storyboard
@@ -30,7 +30,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" red="0.58188301320000002" green="0.21569153669999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="separatorColor" red="0.32369780539999998" green="0.1063579395" blue="0.574860394" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <scrollView key="tableFooterView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="cdQ-hE-lmX">
+                            <rect key="frame" x="0.0" y="72" width="414" height="549"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </scrollView>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" textLabel="BFo-8k-I39" style="IBUITableViewCellStyleDefault" id="Jzx-aa-6Jr">
                                 <rect key="frame" x="0.0" y="28" width="414" height="44"/>
@@ -67,7 +70,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oOy-4M-NbX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="24.800000000000001" y="129.98500749625188"/>
+            <point key="canvasLocation" x="24.637681159420293" y="129.61956521739131"/>
         </scene>
         <!--Add Mediminder Controller-->
         <scene sceneID="otx-bv-qwE">
